Documentation: JWT introduction